# DVAProject

./: .gitignore  README.md  pyproject.toml
src/: analysis.py  main.py
src/data/: spotify-music-api-data-extraction-part1.ipynb
src/visualizations/: index.html  visualization.ts
