[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "dvaproject"
version = "0.1.0"
description = "DVAProject"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
license = { text = "MIT" }

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
# If you later create a package directory under src (e.g., src/dvaproject/),
# you can specify packages = ["src/dvaproject"]
only-include = ["src"]


